# Gemini-FastAPI

./: Dockerfile  README.md  README.zh.md  pyproject.toml
.github/workflows/: docker.yaml  ruff.yaml
app/: main.py
app/models/: __init__.py  models.py
app/server/: chat.py  health.py  images.py  middleware.py
app/services/: client.py  lmdb.py  pool.py
app/utils/: config.py  helper.py  singleton.py
config/: config.yaml
scripts/: dump_lmdb.py
