[project]
name = "gemini-fastapi"
version = "1.0.0"
description = "FastAPI Server built on Gemini Web API"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "curl-cffi>=0.14.0",
    "fastapi>=0.134.0",
    "gemini-webapi>=1.19.2",
    "httptools>=0.7.1",
    "lmdb>=1.7.5",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "pydantic-settings[yaml]>=2.13.1",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",
]

[project.urls]
Repository = "https://github.com/Nativu5/Gemini-FastAPI"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[dependency-groups]
dev = [
    "gemini-fastapi[dev]",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.security.HTTPBearer",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
